# python-namespace-demo

./: README.md
consumer/: main.py  requirements.txt
package1/: pyproject.toml
package2/: pyproject.toml
